🔧 Fix deployment issues
- Updated HTML title and SEO metadata
- Added Node.js version specification (.nvmrc)
- Removed test message from homepage
- Improved build compatibility for Cloudflare Pages

🚀 This should fix the blank page issue

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>shaiitech</title>
+    <title>SHAIITECH - Turning Dreams Into Reality</title>
+    <meta name="description" content="SHAIITECH is a premier technology company that transforms visionary ideas into cutting-edge digital solutions. Professional web development, AI, cloud solutions, and more.">
+    <meta name="keywords" content="SHAIITECH, technology, web development, AI, cloud solutions, digital transformation">
+    <meta property="og:title" content="SHAIITECH - Turning Dreams Into Reality">
+    <meta property="og:description" content="Premier technology company specializing in cutting-edge digital solutions.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://shaiitech.com">
   </head>
   <body>
     <div id="root"></div>
